FinFamily Release notes

At least for now releases follow the Subversion revision numbers. Numbers in the headers show download counts for the older version. Earlier release notes are in releasenotes0172

Release 680 on 20 aug 2010

* Added possibilty to print pictures separately at end of document with links to tables. 
  Pictures are to be organized manually afterwords
* Added styles to descendant report

Release 678 on 17 aug 2010

* Bugfixes

Release 671 on 14 aug 2010

* Some gedcom fixes regarding FAM record
* Modifications to relation notice and relation report management

Release 666 on 10 aug 2010

* gedcom import enchanced to intrepret correctly file from another application
* modified report to ask for index and removed button to write index from dialog
* fixed problem with logfile location

Release 659 on 9 aug 2010

* Bugfixes to login to database and to bad died dates

Release 653 on 2 aug 2010

* Added code to select location from required country.
* Some internal code refactoring

Release 648 on 25 jul 2010

* fix to restore backup surety
* enchanhed OpenStreetMaps display

Release 640 on 21 jul 2010

* Fixes to placelocations
* Moved default country to database

Release 635 on 20 jul 2010

* Added alternative map from OpenStreetMaps service
* Modified setup page to select map software
* Modified structure of location data 

Release 621 on 8 jul 2010

* Fixed problems with sorting database view

Release 618 on 1 jul 2010

* Added datecontrol to search dialog for update/created dates
* Added indicator if FamilyTree children have own children or parents also have parents

Release 609 on 30 jun 2010

* Fixes to compare imported persons.

Release 605 on 29 jun 2010

* Check for existing persons added to import from other database

Release 596 on 17 jun 2010

* Added Import from other database

Release 584 on 5 jun 2010 (91)

* Added rest of tables to backup. Fixed bug (from 580) in restore from Suku 2004

Release 580 on 1 jun 2010 (41)
