@@ -2,6 +2,14 @@ FinFamily Release notes
 
 At least for now releases follow the Subversion revision numbers. Numbers in the headers show download counts for the older version. Earlier release notes are in releasenotes0172
 
+Release 69x on 2x aug 2010
+
+* Added option to print all ancestor branches
+* Update family tree and database draft whenever person is changed
+* Modified spouses parents see also printing
+* GUI changed to use RadioButtons for sex instead of combobox
+* Fixes to check when person has changed => not so many unnecessary updates
+
 Release 680 on 20 aug 2010
 
 * Added possibilty to print pictures separately at end of document with links to tables. 
